🐛 Fix distorted image dimensions on screens

--- a/src/styles/2-base/base.scss
+++ b/src/styles/2-base/base.scss
@@ -34,6 +34,7 @@ img {
 }
 
 .vel-img {
-  max-width: 100vw !important;
+  max-width: auto !important;
   max-height: 100vh !important;
+  width: auto !important;
 }
